force-app/main/default/objects/Contact/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <formula>IF ( Days_Last_Contact__c &lt;= 30, IMAGE(&quot;/resource/IconGreenDot&quot;, &quot;Green&quot;),
IF ( Days_Last_Contact__c &lt; 0, IMAGE(&quot;/resource/IconBlankDot&quot;, &quot;Blank&quot;),
IF ( AND ( Days_Last_Contact__c &gt; 30, Days_Last_Contact__c &lt;= 60 ), IMAGE(&quot;/resource/IconYellowDot&quot;, &quot;Yellow&quot;),
IMAGE(&quot;/resource/IconRedDot&quot;, &quot;Red&quot;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Status</label>
    <type>Text</type>
</CustomField>