force-app/main/default/objects/Contact/fields/cvof1_crm_xref__c.field-meta.xml
<CustomField>
    <fullName>cvof1_crm_xref__c</fullName>
    <inlineHelpText>GUID for matching record in CRM. Contacts with matching GUIDS are the same contact but attached to multiple locations in ERP.</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>