force-app/main/default/objects/Contact/fields/cvofcontact_name1__c.field-meta.xml
<CustomField>
    <fullName>cvofcontact_name1__c</fullName>
    <inlineHelpText>First Middle Last Name</inlineHelpText>
    <label>Contact Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>