force-app/main/default/objects/Contact/fields/cvofmanager1__c.field-meta.xml
<CustomField>
    <fullName>cvofmanager1__c</fullName>
    <inlineHelpText>Enter First and Last Name of Hoogwegt Employee who manages this contact.</inlineHelpText>
    <label>Contact Record Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>