force-app/main/default/objects/Contact/fields/cvofphone_ext1__c.field-meta.xml
<CustomField>
    <fullName>cvofphone_ext1__c</fullName>
    <inlineHelpText>Contact Phone_Ext</inlineHelpText>
    <label>Contact Phone Ext.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>