force-app/main/default/objects/Contact/fields/Days_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_Last_Contact__c</fullName>
    <formula>BLANKVALUE(TODAY() - LastActivityDate, 999)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Last Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>