force-app/main/default/objects/Contact/fields/LookupValue__c.field-meta.xml
<CustomField>
    <fullName>LookupValue__c</fullName>
    <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LookupValue</label>
    <type>Text</type>
</CustomField>