force-app/main/default/objects/Contact/fields/Meeting_note__c.field-meta.xml
<CustomField>
    <fullName>Meeting_note__c</fullName>
    <label>Meeting note</label>
    <type>TextArea</type>
</CustomField>