force-app/main/default/objects/Contact/fields/Neglected_Contact__c.field-meta.xml
<CustomField>
    <fullName>Neglected_Contact__c</fullName>
    <formula>IF(Days_Last_Contact__c &lt;= 60, &apos;Not Neglected&apos;,
IF(Days_Last_Contact__c &gt;= 90 ,&apos;Neglected&apos;,&apos;At Risk&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Neglected Contact</label>
    <type>Text</type>
</CustomField>