force-app/main/default/objects/Contact/recordTypes/Active_Contact.recordType-meta.xml
<RecordType>
    <fullName>Active_Contact</fullName>
    <active>true</active>
    <label>Active Contact</label>
</RecordType>