force-app/main/default/objects/Contact/recordTypes/Inactive_Contact.recordType-meta.xml
<RecordType>
    <fullName>Inactive_Contact</fullName>
    <active>true</active>
    <label>Inactive Contact</label>
</RecordType>