force-app/main/default/objects/Contact/listViews/Edwin_contacts.listView-meta.xml
<ListView>
    <fullName>Edwin_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Department__c</columns>
    <filterScope>Mine</filterScope>
    <label>Edwin contacts</label>
</ListView>