force-app/main/default/objects/Contact/listViews/My_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Contacts</label>
</ListView>